--- a/components/about/about.html
+++ b/components/about/about.html
@@ -1,7 +1,7 @@
 <header>
-    <a href ="/#!/" class = "links">Home</a>
-    <a href ="/#!/about" class = "currentlinks">About Me</a>
-    <a href ="/#!/skills"class = "links">Skills</a>
+    <a href ="Portfolio/#!/" class = "links">Home</a>
+    <a href ="portfolio/#!/about" class = "currentlinks">About Me</a>
+    <a href ="portfolio/#!/skills"class = "links">Skills</a>
     </header>  
 <div class = "aboutWrapper">
     <div class = "spacing">
