--- a/components/homepage/home.html
+++ b/components/homepage/home.html
@@ -1,7 +1,7 @@
 <header>
-        <a href ="/#!/" class ="currentlinks">Home</a>
-        <a href ="/#!/about" class ="links">About Me</a>
-        <a href ="/#!/skills"class ="links">Skills</a>
+        <a href ="Portfolio/#!//#!/" class ="currentlinks">Home</a>
+        <a href ="Portfolio/#!//#!/about" class ="links">About Me</a>
+        <a href ="Portfolio/#!//#!/skills"class ="links">Skills</a>
        
 
     </header>  
