--- a/components/project/project.html
+++ b/components/project/project.html
@@ -1,7 +1,7 @@
 <header>
-    <a href ="Portfolio/#!//#!/" class = "links">Home</a>
-    <a href ="Portfolio/#!//#!/about" class = "links">About Me</a>
-    <a href ="Portfolio/#!//#!/skills"class = "currentlinks">Skills</a>
+    <a href ="home.html" class = "links">Home</a>
+    <a href ="about.html" class = "links">About Me</a>
+    <a href ="project.html"class = "currentlinks">Skills</a>
     </header>  
 
 <div class = "skillsWrapper">
