--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ header{
     margin-right: auto;
     margin-top:-40px;
     box-shadow: 10px 6px 16px 5px rgba(0,0,0,0.75);
-    border-radius: 5px;
+    border-radius: 25px;
 }
 
 .centerlogo{
@@ -47,6 +47,7 @@ header{
 .aboutWrapper{
     display: flex;
     flex-direction:row;
+   
 }
 .spacing{
     margin:auto;
@@ -63,6 +64,8 @@ header{
     width: 70vw;
     margin-right: auto;
     margin-left: auto;
+    box-shadow: 10px 6px 16px 5px rgba(0,0,0,0.75);
+    border-radius: 25px;
 }
 .starwrapper{
     display: flex;
